--- a/css/maincss.css
+++ b/css/maincss.css
@@ -1,66 +1,143 @@
-html {
-    font-family: 'Courier New', Courier, monospace;
-    color: black;
-    background-color: darkcyan;
-}
-p {
-    font-size: 18px;
-}
-.title {
-    background-color: darkcyan;
-    font-size: 400%;
-    font-family: 'Courier New', Courier, monospace;
-    color: black;
-    text-align: center;
-}
+@media screen and (max-width:900px){
+    html {
+        font-family: 'Courier New', Courier, monospace;
+        color: black;
+        background-color: darkcyan;
+        max-width:900px;
+        margin: auto;
+    }
+    p {
+        font-size: 18px;
+    }
+    .title {
+        background-color: darkcyan;
+        font-size: 400%;
+        font-family: 'Courier New', Courier, monospace;
+        color: black;
+        text-align: center;
+    }
 
-.topbuttons {
-    background-color:aquamarine;
-    border: none;
-    color:black;
-    font-size: 60px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 12px;
-    float: left;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+
+    .topbuttons2 {
+        display: grid;
+        grid-template-columns: repeat(4, auto); 
+        color:darkcyan;
+        background-color: #000;
+        align-items: center;
+        
+    }
+    .aboutme {
+        font-size: x-large;
+        padding: 20px;
+        align-self: center;
+    }
+    .contactdetails {
+        font-style: oblique;
+        font-size: x-large;
+    }
+    .aboutmeparagraph {
+        text-align: left;
+        padding: 20px;
+        border-color: black;
+        border-style: dashed;
+        max-width: 75%;
+        align-self: center;
+        margin: auto;
+    }
+    .image {
+        width: 45%;
+        max-width: 350px;
+        align-self: center;
+    }    
+
+    .aboutme2 {
+        font-size: large;
+        padding: 20px;
+    }
+    a {
+        font-size: 20px;
+        padding: 2px;
+        margin: 2px;
+        background-color: aliceblue;
+    }
+
+    .aboutmesection {
+        display: flex;
+        max-block-size: 100%;
+        align-items: center;
+        
+        align-content: center;
+    }
 }
-.topbuttons2 {
-    border: none;
-    outline: 0;
-    display: grid;
-    grid-template-columns: repeat(4, auto); 
-    gap: 10px;
-    padding: 8px;
-    color:darkcyan;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-}
-.aboutme {
-    font-size: x-large;
-    padding: 20px;
-}
-.contactdetails {
-    font-style: oblique;
-    font-size: x-large;
-}
-.aboutmeparagraph {
-    text-align: left;
-    padding: 20px;
-    border-color: black;
-    border-style: dashed;
-    max-width: 45%;
-}
-.aboutmeimage {
-    max-width: 45%;
-}    
-.image {
-    max-width: 100%;
-    max-height: 100%;
-}
-.aboutme2 {
-    font-size: large;
-    padding: 20px;
+@media screen and (min-width:900px){
+    html {
+        font-family: 'Courier New', Courier, monospace;
+        color: black;
+        background-color: darkcyan;
+        max-width: 1200px;
+        margin: auto;
+    }
+    p {
+        font-size: 18px;
+    }
+    .title {
+        background-color: darkcyan;
+        font-size: 400%;
+        font-family: 'Courier New', Courier, monospace;
+        color: black;
+        text-align: center;
+    }
+
+
+    .topbuttons2 {
+        display: grid;
+        grid-template-columns: repeat(4, auto); 
+        color:darkcyan;
+        background-color: #000;
+        align-items: center;
+        
+    }
+    .aboutme {
+        font-size: x-large;
+        padding: 20px;
+        align-self: center;
+    }
+    .contactdetails {
+        font-style: oblique;
+        font-size: x-large;
+    }
+    .aboutmeparagraph {
+        text-align: left;
+        padding: 20px;
+        border-color: black;
+        border-style: dashed;
+        max-width: 75%;
+        align-self: center;
+        margin: auto;
+    }
+    .image {
+        width: 45%;
+        align-self: center;
+    }    
+
+    .aboutme2 {
+        font-size: large;
+        padding: 20px;
+    }
+    .topbuttons2 > a {
+        font-size: 20px;
+        padding: 20px;
+        margin: 10px;
+        background-color: aliceblue;
+    }
+    a:hover {
+        background-color: aqua;
+    }
+    .aboutmesection {
+        display: flex;
+        max-block-size: 100%;
+        align-items: center;
+        
+        align-content: center;
+    }
 }
